# docx-parse-eval

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE.md  evaluation-framework-spec.md  implementation-plan.md  manifest.scm  pyproject.toml
.github/workflows/: ci.yml
experiments/: dpbench_experiment.py
src/docx_parse_eval/: __init__.py  cli.py  comparator.py  config.py  io.py  normalize.py  output.py  report.py  schema.py  teds.py
src/docx_parse_eval/adapters/: __init__.py  _common.py  docling_adapter.py  ooxml_reference.py
tests/: test_adapter_shape_equivalence.py  test_calibration.py  test_cli.py  test_comparator.py  test_docling_adapter.py  test_fixtures.py  test_hard_cases.py  test_normalize.py  test_ooxml_adapter.py  test_output.py  test_public_docling.py  test_report.py  test_schema_roundtrip.py  test_sdt_table.py  test_textbox.py  test_workflow.py
tests/fixtures/: build_sdt_table.py  build_synthetic.py  build_textbox.py  mutations.py  sdt_table.docx  synthetic.docx  synthetic.gold.json  synthetic.mutated.json  textbox.docx
tests/fixtures/docling/: SOURCE.md  mini.docling.json
