[build-system]
requires = ["setuptools>=77"]  # PEP 639 SPDX `license` field
build-backend = "setuptools.build_meta"

[project]
name = "docx-parse-eval"
version = "0.1.0"
description = "Differential evaluation harness for .docx parsers: reference OOXML extraction vs any document-intelligence output (Docling, ...) on a shared schema"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Samuel Schmidt", email = "schmidt.l.samuel@gmail.com" }]
keywords = ["docx", "docling", "document-parsing", "evaluation", "TEDS", "differential-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Software Development :: Quality Assurance",
]
# Runtime deps are provisioned via Guix (see evaluation/manifest.scm), not pip.
# Listed here for documentation / non-Guix installs.
dependencies = [
    "pydantic>=2",
    "python-docx>=1",
    "Levenshtein>=0.27",
    "apted>=1.0",
    "pandas>=2",
    "pyarrow>=15",
]

[project.optional-dependencies]
test = ["pytest>=8"]

# PEP 735 — `uv sync` installs these by default; `uv run pytest` just works.
[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
docx-parse-eval = "docx_parse_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Defaults (E4/E7/E9, F) plus ambiguous-name and import hygiene kept strict.
extend-select = ["E741", "I"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
